--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -43,7 +43,7 @@ button i {
   margin: auto;
 }
 .heading h1 {
-  color: #2d3954;
+  color: #382d2d;
   font-weight: 600;
   text-transform: capitalize;
   font-size: 35px;
