--- a/Frontend/src/components/home/hero/hero.css
+++ b/Frontend/src/components/home/hero/hero.css
@@ -94,6 +94,12 @@ form h4 {
   margin-top: 11px;  
   margin-left: 150px;
 }
+.heading{
+  color: #fff;
+}
+.title{
+  color: #f1f1f1;
+}
 
 @media screen and (max-width: 800px) {
   .hero .container {
@@ -109,4 +115,5 @@ form h4 {
   form input {
     width: 100%;
   }
+
 }
